Update kunpeng repository

--- a/pom.xml
+++ b/pom.xml
@@ -1002,7 +1002,7 @@
                 <enabled>true</enabled>
             </releases>
             <snapshots>
-                <enabled>true</enabled>
+                <enabled>false</enabled>
             </snapshots>
         </repository>
     </repositories>
