--- a/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
+++ b/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
@@ -63,3 +63,5 @@
 #    # The default value is -1, which means set the minimum value for different JDBC drivers.
 #  proxy-backend-query-fetch-size: -1
 #  check-duplicate-table-enabled: false
+#  proxy-frontend-executor-size: 0 # The default value is Logic CPU * 2.
+#  proxy-frontend-prefer-netty-event-loop: false
