support gov && pg it tests

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -36,8 +36,8 @@ jobs:
       matrix:
         env: [ docker ]
         adapter: [ proxy, jdbc ]
-        database: [ MySQL ]
-        scenario: [ db,tbl,dbtbl_with_readwrite_splitting,encrypt,dbtbl_with_readwrite_splitting_and_encrypt,readwrite_splitting ]
+        database: [ MySQL,PostgreSQL ]
+        scenario: [ db,tbl,dbtbl_with_readwrite_splitting,encrypt,dbtbl_with_readwrite_splitting_and_encrypt,readwrite_splitting,sharding_governance ]
     steps:
       - name: Cache Maven Repos
         uses: actions/cache@v2
