--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,10 @@ jobs:
         with:
           java-version: 8
       - name: Build with Maven
-        run: cmd /c '.\mvnw -B clean cobertura:cobertura -D"maven.javadoc.skip"=true install < nul'
+        shell: cmd
+          run: |
+            .\mvnw -B clean cobertura:cobertura -D"maven.javadoc.skip"=true install < nul
+            echo "mvnw exited"
       - name: Build examples with Maven
         run: cmd /c '.\mvnw -B -f examples/pom.xml clean package -DskipTests < nul'
   
