--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
             .\mvnw -B clean cobertura:cobertura -D"maven.javadoc.skip"=true install < nul
             echo "mvnw exited"
       - name: Build examples with Maven
-        run: cmd /c '.\mvnw -B -f examples/pom.xml clean package -DskipTests < nul'
+        run: ./mvnw -B -f examples/pom.xml clean package -DskipTests
   
   unix:
     runs-on: ${{ matrix.os }}
