--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -53,8 +53,8 @@ jobs:
           ../../mvnw clean package -Prelease,docker
           IMAGE_ID=$(docker image ls | grep apache | awk '{print $3}')
           VERSION=$(docker image ls | grep apache | awk '{print $2}')
-          docker tag {} ${{ GITHUB_ACTOR }}/shardingsphere-proxy:latest
-          docker tag {} ${{ GITHUB_ACTOR }}/shardingsphere-proxy:$VERSION
+          docker tag {} ${{ github.actor }}/shardingsphere-proxy:latest
+          docker tag {} ${{ github.actor }}/shardingsphere-proxy:$VERSION
 
       # build and pubilsh image
       - name: Set up QEMU
