--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -52,8 +52,8 @@ jobs:
           ./mvnw -B -Prelease,docker -DskipTests clean install
           IMAGE_ID=$(docker image ls | grep apache | awk '{print $3}')
           VERSION=$(docker image ls | grep apache | awk '{print $2}')
-          docker tag {} ${{ github.actor }}/shardingsphere-proxy:latest
-          docker tag {} ${{ github.actor }}/shardingsphere-proxy:$VERSION
+          docker tag $IMAGE_ID ${{ github.actor }}/shardingsphere-proxy:latest
+          docker tag $IMAGE_ID ${{ github.actor }}/shardingsphere-proxy:$VERSION
 
       # build and pubilsh image
       - name: Set up QEMU
