--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,10 +64,10 @@ jobs:
       - name: Build Project
         run: |
           ./mvnw -B -Prelease,docker -DskipTests clean install
-          docker image ls --format "{{.ID}} {{.Repository}} {{.Tag}}" | grep apache| sed  's/apache\//${{ github.actor }}\//' |tr A-Z a-z |awk '{system("docker tag "$1" "$2":latest;docker tag "$1" "$2":"$3";")}'
+          docker image ls --format "{{.ID}} {{.Repository}} {{.Tag}}" | grep apache| sed  's/apache\//${{ secrets.DOCKERHUB_USERNAME }}\//' |tr A-Z a-z |awk '{system("docker tag "$1" "$2":latest;docker tag "$1" "$2":"$3";")}'
 
       - name: Push Docker Image
         run: |
           echo Docker Images: 
-          echo `docker image ls|grep -i ${{ github.actor }}|awk '{print $1":"$2}'`
-          docker image ls|grep -i ${{ github.actor }}|awk '{print $1":"$2}'|xargs -i docker push {}
+          echo `docker image ls|grep -i ${{ secrets.DOCKERHUB_USERNAME }}|awk '{print $1":"$2}'`
+          docker image ls|grep -i ${{ secrets.DOCKERHUB_USERNAME }}|awk '{print $1":"$2}'|xargs -i docker push {}
