--- a/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
+++ b/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
@@ -63,5 +63,7 @@
 #    # The default value is -1, which means set the minimum value for different JDBC drivers.
 #  proxy-backend-query-fetch-size: -1
 #  check-duplicate-table-enabled: false
-#  proxy-frontend-executor-size: 0 # The default value is Logic CPU * 2.
-#  proxy-frontend-prefer-netty-event-loop: false
+#  proxy-frontend-netty-executor-size: 0 # Proxy frontend Netty executor size. The default value is 0, which means let Netty decide.
+#    # Proxy backend prefer Netty executor. This option may reduce time cost of writing packets to client,
+#    # but it may increase the latency of SQL execution if client connections are more than proxy-frontend-netty-executor-size.
+#  proxy-backend-prefer-netty-executor: false
