--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -31,6 +31,7 @@
         <module>shardingsphere-jdbc-example</module>
         <module>shardingsphere-proxy-example</module>
         <module>shardingsphere-parser-example</module>
+        <module>shardingsphere-example-engine</module>
     </modules>
     
     <properties>
@@ -72,6 +73,9 @@
         <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
         <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
         <maven-source-plugin.version>2.4</maven-source-plugin.version>
+        <freemarker.version>2.3.31</freemarker.version>
+        <jaxb.version>2.3.0</jaxb.version>
+        <annotation-api.version>1.3.2</annotation-api.version>
         
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     </properties>
@@ -265,6 +269,11 @@
                 <artifactId>spring-test</artifactId>
                 <version>${spring-framework.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
