--- a/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
+++ b/shardingsphere-distribution/shardingsphere-proxy-distribution/src/main/resources/conf/server.yaml
@@ -64,7 +64,6 @@
 #  proxy-backend-query-fetch-size: -1
 #  check-duplicate-table-enabled: false
 #  proxy-frontend-netty-executor-size: 0 # Proxy frontend Netty executor size. The default value is 0, which means let Netty decide.
-#    # Proxy optimize latency for OLTP. Enable this may reduce time cost of writing packets to client,
-#    # but it may increase the latency of SQL execution if client connections are more than proxy-frontend-netty-executor-size,
-#    # especially executing slow SQL.
+#    # Proxy optimize latency for OLTP. Enable this may reduce time cost of writing packets to client, but it may increase the latency of SQL execution
+#    # if client connections are more than proxy-frontend-netty-executor-size, especially executing slow SQL.
 #  proxy-optimize-latency-for-oltp: false
