--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/server.yaml
@@ -29,42 +29,42 @@
 #    props:
 #      incremental-task-idle-minute-threshold: 30
 #
-#mode:
-#  type: Cluster
-#  repository:
-#    type: ZooKeeper
-#    props:
-#      namespace: governance_ds
-#      server-lists: localhost:2181
-#      retryIntervalMilliseconds: 500
-#      timeToLiveSeconds: 60
-#      maxRetries: 3
-#      operationTimeoutMilliseconds: 500
-#  overwrite: false
+mode:
+  type: Cluster
+  repository:
+    type: ZooKeeper
+    props:
+      namespace: governance_ds
+      server-lists: localhost:2181
+      retryIntervalMilliseconds: 500
+      timeToLiveSeconds: 60
+      maxRetries: 3
+      operationTimeoutMilliseconds: 500
+  overwrite: true
 #
-#rules:
-#  - !AUTHORITY
-#    users:
-#      - root@%:root
-#      - sharding@:sharding
-#    provider:
-#      type: NATIVE
-#  - !TRANSACTION
-#    defaultType: XA
-#    providerType: Atomikos
+rules:
+  - !AUTHORITY
+    users:
+      - root@%:root
+      - sharding@:sharding
+    provider:
+      type: NATIVE
+  - !TRANSACTION
+    defaultType: XA
+    providerType: Atomikos
 
-#props:
-#  max-connections-size-per-query: 1
-#  executor-size: 16  # Infinite by default.
-#  proxy-frontend-flush-threshold: 128  # The default value is 128.
-#  proxy-opentracing-enabled: false
-#  proxy-hint-enabled: false
-#  sql-show: false
-#  check-table-metadata-enabled: false
-#  lock-wait-timeout-milliseconds: 50000 # The maximum time to wait for a lock
-#  show-process-list-enabled: false
-#    # Proxy backend query fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
-#    # The default value is -1, which means set the minimum value for different JDBC drivers.
-#  proxy-backend-query-fetch-size: -1
-#  check-duplicate-table-enabled: false
+props:
+  max-connections-size-per-query: 1
+  executor-size: 16  # Infinite by default.
+  proxy-frontend-flush-threshold: 128  # The default value is 128.
+  proxy-opentracing-enabled: false
+  proxy-hint-enabled: false
+  sql-show: false
+  check-table-metadata-enabled: false
+  lock-wait-timeout-milliseconds: 50000 # The maximum time to wait for a lock
+  show-process-list-enabled: false
+    # Proxy backend query fetch size. A larger value may increase the memory usage of ShardingSphere Proxy.
+    # The default value is -1, which means set the minimum value for different JDBC drivers.
+  proxy-backend-query-fetch-size: -1
+  check-duplicate-table-enabled: false
 #  sql-comment-parse-enabled: false
