--- a/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/config-shadow.yaml
+++ b/shardingsphere-proxy/shardingsphere-proxy-bootstrap/src/main/resources/conf/config-shadow.yaml
@@ -1,95 +1,49 @@
-##
-## Licensed to the Apache Software Foundation (ASF) under one or more
-## contributor license agreements.  See the NOTICE file distributed with
-## this work for additional information regarding copyright ownership.
-## The ASF licenses this file to You under the Apache License, Version 2.0
-## (the "License"); you may not use this file except in compliance with
-## the License.  You may obtain a copy of the License at
-##
-##     http://www.apache.org/licenses/LICENSE-2.0
-##
-## Unless required by applicable law or agreed to in writing, software
-## distributed under the License is distributed on an "AS IS" BASIS,
-## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-## See the License for the specific language governing permissions and
-## limitations under the License.
-##
 #
-#######################################################################################################
-##
-## Here you can configure the rules for the proxy.
-## This example is configuration of shadow rule.
-##
-#######################################################################################################
-##
-##schemaName: shadow_db
-##
-##dataSources:
-##  ds:
-##    url: jdbc:postgresql://127.0.0.1:5432/demo_ds_0?serverTimezone=UTC&useSSL=false
-##    username: postgres
-##    password: postgres
-##    connectionTimeoutMilliseconds: 30000
-##    idleTimeoutMilliseconds: 60000
-##    maxLifetimeMilliseconds: 1800000
-##    maxPoolSize: 50
-##    minPoolSize: 1
-##  shadow_ds:
-##    url: jdbc:postgresql://127.0.0.1:5432/demo_ds_1?serverTimezone=UTC&useSSL=false
-##    username: postgres
-##    password: postgres
-##    connectionTimeoutMilliseconds: 30000
-##    idleTimeoutMilliseconds: 60000
-##    maxLifetimeMilliseconds: 1800000
-##    maxPoolSize: 50
-##    minPoolSize: 1
-##
-##rules:
-##- !SHADOW
-##  column: shadow
-##  sourceDataSourceNames:
-##   - ds
-##  shadowDataSourceNames:
-##   - shadow_ds
-##
-##
-#######################################################################################################
-##
-## If you want to connect to MySQL, you should manually copy MySQL driver to lib directory.
-##
-#######################################################################################################
-##
-schemaName: shadow_db
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
 #
-dataSources:
-  ds:
-    url: jdbc:mysql://127.0.0.1:3306/demo_shadow_write_ds?serverTimezone=UTC&useSSL=false
-    username: root
-    password: root
-    connectionTimeoutMilliseconds: 30000
-    idleTimeoutMilliseconds: 60000
-    maxLifetimeMilliseconds: 1800000
-    maxPoolSize: 50
-    minPoolSize: 1
-  shadow_ds:
-    url: jdbc:mysql://127.0.0.1:3306/demo_shadow_read_ds?serverTimezone=UTC&useSSL=false
-    username: root
-    password: root
-    connectionTimeoutMilliseconds: 30000
-    idleTimeoutMilliseconds: 60000
-    maxLifetimeMilliseconds: 1800000
-    maxPoolSize: 50
-    minPoolSize: 1
-  shadow_ds_1:
-    url: jdbc:mysql://127.0.0.1:3306/demo_shadow_read_ds?serverTimezone=UTC&useSSL=false
-    username: root
-    password: root
-    connectionTimeoutMilliseconds: 30000
-    idleTimeoutMilliseconds: 60000
-    maxLifetimeMilliseconds: 1800000
-    maxPoolSize: 50
-    minPoolSize: 1
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 
+######################################################################################################
+# 
+# Here you can configure the rules for the proxy.
+# This example is configuration of shadow rule.
+# 
+######################################################################################################
+#
+#schemaName: shadow_db
+#
+#dataSources:
+#  ds:
+#    url: jdbc:postgresql://127.0.0.1:5432/demo_ds_0?serverTimezone=UTC&useSSL=false
+#    username: postgres
+#    password: postgres
+#    connectionTimeoutMilliseconds: 30000
+#    idleTimeoutMilliseconds: 60000
+#    maxLifetimeMilliseconds: 1800000
+#    maxPoolSize: 50
+#    minPoolSize: 1
+#  shadow_ds:
+#    url: jdbc:postgresql://127.0.0.1:5432/demo_ds_1?serverTimezone=UTC&useSSL=false
+#    username: postgres
+#    password: postgres
+#    connectionTimeoutMilliseconds: 30000
+#    idleTimeoutMilliseconds: 60000
+#    maxLifetimeMilliseconds: 1800000
+#    maxPoolSize: 50
+#    minPoolSize: 1
+#
 #rules:
 #- !SHADOW
 #  column: shadow
@@ -97,51 +51,40 @@ dataSources:
 #   - ds
 #  shadowDataSourceNames:
 #   - shadow_ds
-#  enable: true
-#  dataSources:
-#    shadowDataSource:
-#      sourceDataSourceName: ds
-#      shadowDataSourceName: ds_shadow
-#    shadowDataSource_1:
-#      sourceDataSourceName: ds
-#      shadowDataSourceName: ds_shadow_1
-#    shadowDataSource_2:
-#      sourceDataSourceName: shadow_ds
-#      shadowDataSourceName: ds_shadow_1
-#  tables:
-#    t_order:
-#      shadowAlgorithmNames:
-#        - user-id-match-algorithm
-#        - simple-note-algorithm
-#      dataSourceNames: 
-#        - shadowDataSource_1
-#    t_order_1:
-#      shadowAlgorithmNames:
-#        - user-id-match-algorithm
-#        - simple-note-algorithm
-#      dataSourceNames: 
-#        - shadowDataSource_1
-#    t_order_2:
-#      shadowAlgorithmNames:
-#        - user-id-match-algorithm
-#        - simple-note-algorithm
-#      dataSourceNames: 
-#        - shadowDataSource_1
-#    t_user:
-#      shadowAlgorithmNames:
-#        - simple-note-algorithm
-#      dataSourceNames: 
-#        - shadowDataSource
 #
-#  shadowAlgorithms:
-#    user-id-match-algorithm:
-#      type: COLUMN_REGEX_MATCH
-#      props:
-#        operation: insert
-#        column: user_id
-#        regex: "[1]"
-#    simple-note-algorithm:
-#      type: SIMPLE_NOTE
-#      props:
-#        shadow: true
-#        foo: bar
+#
+######################################################################################################
+#
+# If you want to connect to MySQL, you should manually copy MySQL driver to lib directory.
+#
+######################################################################################################
+#
+#schemaName: shadow_db
+#
+#dataSources:
+#  ds:
+#    url: jdbc:mysql://127.0.0.1:3306/demo_ds_0?serverTimezone=UTC&useSSL=false
+#    username: root
+#    password:
+#    connectionTimeoutMilliseconds: 30000
+#    idleTimeoutMilliseconds: 60000
+#    maxLifetimeMilliseconds: 1800000
+#    maxPoolSize: 50
+#    minPoolSize: 1
+#  shadow_ds:
+#    url: jdbc:mysql://127.0.0.1:3306/demo_ds_1?serverTimezone=UTC&useSSL=false
+#    username: root
+#    password:
+#    connectionTimeoutMilliseconds: 30000
+#    idleTimeoutMilliseconds: 60000
+#    maxLifetimeMilliseconds: 1800000
+#    maxPoolSize: 50
+#    minPoolSize: 1
+#
+#rules:
+#- !SHADOW
+#  column: shadow
+#  sourceDataSourceNames:
+#   - ds
+#  shadowDataSourceNames:
+#   - shadow_ds
